bynkc/tests/fixtures/negative/302_http_cache_unknown_arg/src/api.bynk
context api

type View = { ok: Bool }

service api from http {
  @cache(maxAge: 5.minutes, staleWhileRevalidate: 1.minutes)
  on GET("/items") () -> Effect[HttpResult[View]] by Visitor {
    Ok(View { ok: true })
  }
}
